Update 1 - Copia.html

--- a/index_arquivos/CANAIS/1 - Copia.html
+++ b/index_arquivos/CANAIS/1 - Copia.html
@@ -51,291 +51,288 @@ img {
 <!---------------------------------------------------------------------------------->
 <button><a href="
 https://www.youtube.com/@SertaoMamoeiroOficial
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 https://yt3.googleusercontent.com/ytc/APkrFKYlHNLWmzOJi7t3XEVx9vN6lmfOKbTif8EOR3B3jA=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
  Sertão Mamoeiro
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://www.youtube.com/@eitatianasouza" target="_blank"><img src="
+https://yt3.googleusercontent.com/Q65lxftzMtkQ2YlmjA7rZ5gaEjNmMp6yTzbVYbmj06CjEGRUeMdF0sMyLy9ERGTb6_gDZNiQ=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+Tatiana Souza 
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://www.youtube.com/@asribeirinhasdaamazonia" target="_blank"><img src="
+https://yt3.googleusercontent.com/ux8DZrWUlQTqA7CYQv8rz02oLqX1mUAxgjlxALOZC4KdRcxrGzS1xmtsJ0m_0Q0zMRal_6jtZXY=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+Ribeirinha da Amazônia<BR/> Fabiola Alves Pedrosa 
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://www.youtube.com/@robertorsfilmes" target="_blank"><img src="
+https://yt3.googleusercontent.com/ytc/APkrFKZMv0lTWEHiZUljJ3SqKGoSwRuJz3yPZ_TdrSrfN9A=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+Roberto rsfilmes 
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://www.youtube.com/@CanalHistory
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/tTgKfMKgmrcMC5V-HZmFOb1s8AUbQP2q0nPMgd17eA8Jb8K5AY7l3h3FHNdqjuJ1BuD2xn70ROQ=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+Canal History Brasil
+.<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
+https://www.youtube.com/@euevocenosertao1141
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/dPCdgcYBi7Q8488ApLVosMVDvYvxarUKrV9o7x59UoYTfZchnOtW9YCdgZJkjns6iWypNCXAfw=s176-c-k-c0x00ffffff-no-rj
+" width="280" height="280"></a><BR/>
+Eu e você no sertão
+.<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
+https://www.youtube.com/@nordestinofeliz
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/QnqTxpRFgrw3aqbmw9Ngm3lHWANiHFv7_uSH8rdLprfEPMwy2auMPndFX2BFMVIG28Z185cTeA=s176-c-k-c0x00ffffff-no-rj
+" width="280" height="280"></a><BR/>
+ANIMES
+.<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
+https://www.youtube.com/@sertaopopularoficial
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/ytc/APkrFKZe5viMcTUg4kQmXvcJ6JgEXxLWHmTukfgfFuTO=s176-c-k-c0x00ffffff-no-rj
+" width="280" height="280"></a><BR/>
+Sertão Popular
+.<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
+https://www.youtube.com/@canalfitavt
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/GXSLo5P6CZG07F_vSVgq3GCYmH6c7cOdVsIKtHCgrVhmErK8yvJ7Uq7bhPHu5zeyNtk68VYS2w=s176-c-k-c0x00ffffff-no-rj
+" width="280" height="280"></a><BR/>
+Canal Fita VT
+.<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
+https://www.youtube.com/@BrasilCaipiraOficial
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/S0fn_7yTiU9_alfHPG-OaakYGqE7FAdNDsyW4iGZqN3a02cp_jmxgFYdTrDodICEHJ4Vk8gb=s176-c-k-c0x00ffffff-no-rj
+" width="280" height="280"></a><BR/>
+Canal BRASIL CAIPIRA
+.<BR/></button>
+<!---------------------------------------------------------------------------------->
+<button><a href="
+https://www.youtube.com/@pebaanimacoes
+" target="_blank"><img src="
+https://yt3.googleusercontent.com/f7b38SqCRO1te5FJ5LvnbtjqsEZ9Tm0n2o_Gzgnfb9-1DamY6lpPTz1g5McZ29U1a3q6vzPp=s176-c-k-c0x00ffffff-no-rj
+" width="280" height="280"></a><BR/>
+Peba animações
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
-<!---------------------------------------------------------------------------------->
-<button><a href="
-LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
-" width="280" height="280"></a><BR/>
-NOME⚫
-<BR/></button>
+.<BR/></button>
 
 
 
