--- a/index_arquivos/CANAIS/1.html
+++ b/index_arquivos/CANAIS/1.html
@@ -51,291 +51,291 @@ img {
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
-?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
+" target="_blank"><img src="
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+.<BR/></button>
 
 
 
