--- a/AVISO.html
+++ b/AVISO.html
@@ -46,16 +46,40 @@ img {
   <p>Contém conteúdo para adultos, proibido para menores de 18 anos.</font></b></p>
 </div>
 <!------------------------------------------------------------------>
+<a href="
+https://wa.me/5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
+" target="_blank"><div class="w3-panel w3-gray w3-border"><h2><b><font color="#ffffff">
+Clique aqui e fale comigo, e dê sua opinião 
+</h2><p>
+(WHATSAPP).
+</div></a></font></b></p>
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
 <div class="w3-panel w3-green">
   <h3>ULTIMA ATUALIZAÇÃO EM:</h3>
   <p>10:11 28/10/2023.</p>
 </div>
-<!------------------------------------------------------------------>
-
-<!------------------------------------------------------------------>
-
-<!------------------------------------------------------------------>
-
 <!------------------------------------------------------------------>
 
 
