Update 1 - Copia.html

--- a/index_arquivos/CANAIS/1 - Copia.html
+++ b/index_arquivos/CANAIS/1 - Copia.html
@@ -135,11 +135,11 @@ Peba animações
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube.com/@spoopsvideos
 " target="_blank"><img src="
-IMAGEM⚫
+https://yt3.googleusercontent.com/ytc/APkrFKZAfm10Fu98-86a0vQycRdSMC6P7OXIOnF0XvZn=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+Spoops
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
