Update 1 - Copia.html

--- a/index_arquivos/CANAIS/1 - Copia.html
+++ b/index_arquivos/CANAIS/1 - Copia.html
@@ -143,11 +143,11 @@ Spoops
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube.com/@INCRIVEL_PT
 " target="_blank"><img src="
-IMAGEM⚫
+https://yt3.googleusercontent.com/ytc/APkrFKYaHlUefDu3_xWclEEes4nx37sAWUVDWzGZBigBOA=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+INCRÍVEL
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
