Update 1 - Copia.html

--- a/index_arquivos/index_arquivos/LINKS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/LINKS/1 - Copia.html
@@ -163,9 +163,9 @@ Site "canais de tv" online (Multicanais.website)
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
-LINK🔴
+https://sinalpublico.com/player3/ch.php?canal=warner
 ">
-NOME🔴
+Exemplo do canal WARNER CHANNEL AO VIVO 24 HORAS  (Multicanais.website)
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
