Update 1 - Copia.html

--- a/index_arquivos/index_arquivos/LINKS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/LINKS/1 - Copia.html
@@ -165,37 +165,37 @@ Site "canais de tv" online (Multicanais.website)
 <li><a target="_blank" href="
 https://sinalpublico.com/player3/ch.php?canal=warner
 ">
-Exemplo do canal WARNER CHANNEL AO VIVO 24 HORAS  (Multicanais.website)
+Exemplo do canal WARNER CHANNEL AO VIVO 24 HORAS  (Multicanais.website) tv.
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
-LINK🔴
+https://www.youtube-nocookie.com/embed/yvWlfdgHyzU?autoplay=1&mute=1&enablejsapi=1
 ">
-NOME🔴
+Bomba de água manual - Water Wheel Pump From Bike's Wheel . Electricity free (dicas - como fazer).
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
-LINK🔴
+https://www.youtube-nocookie.com/embed/zORaQfgCqZs?autoplay=1&mute=1&enablejsapi=1
 ">
-NOME🔴
+Como fazer uma bomba d'água com materiais reciclados (dicas - como fazer).
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
-LINK🔴
+https://www.youtube-nocookie.com/embed/lkR9i2Qg7YI?autoplay=1&mute=1&enablejsapi=1
 ">
-NOME🔴
+Simple idea how to make a water pump without electricity without fuel (dicas - como fazer).
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
-LINK🔴
+https://www.youtube-nocookie.com/embed/h60aTYEqV5Y?autoplay=1&mute=1&enablejsapi=1
 ">
-NOME🔴
+POMPA AIR TANPA LISTRIK,BISA HISAP AIR DARI BAWA KE ATAS (dicas - como fazer).
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
-LINK🔴
+https://www.youtube-nocookie.com/embed/9eBf6_W0vlo?autoplay=1&mute=1&enablejsapi=1
 ">
-NOME🔴
+No Motor No Electricity Non Stop Water Diy : (dicas - como fazer).
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_blank" href="
