--- a/AVISO.html
+++ b/AVISO.html
@@ -74,8 +74,6 @@ Clique aqui e fale comigo, e dê sua opinião
 <!------------------------------------------------------------------>
 
 <!------------------------------------------------------------------>
-
-<!------------------------------------------------------------------>
 <div class="w3-panel w3-green">
   <h3>ULTIMA ATUALIZAÇÃO EM:</h3>
   <p>10:11 28/10/2023.</p>
@@ -102,9 +100,17 @@ https://forms.gle/HYTAQvs2mw5ZzFiV8
 <p>Clique aqui para dizer se você está gostando do site (NOSSO SITE).
 </div></a></font></b></p>
 <H3>OU</H3>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScmAMMrre7pxDq6VQtnXpQh27qqIYfBuOtCUtN7thYLbtkbkw/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScmAMMrre7pxDq6VQtnXpQh27qqIYfBuOtCUtN7thYLbtkbkw/viewform?embedded=true" width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
 <!------------------------------------------------------------------>
+<a href="
+https://docs.google.com/forms/d/1wyu10U07toyOQkDFNBYyq_dG2yGCldcB6djJ3zSYJeM/edit#responses
+" target="_blank"><div class="w3-panel w3-gray w3-border"><h2><b><font color="#03fc45">
+RESULTADO DA ENQUETE
+</h2><p>
+CLIQUE AQUI.
+</div></a></font></b></p>
+<!------------------------------------------------------------------>
+
 <!------------------------------------
 RESULTADO DA ENQUETE
 https://docs.google.com/forms/d/1wyu10U07toyOQkDFNBYyq_dG2yGCldcB6djJ3zSYJeM/edit#responses
