Update 1 - Copia.html

--- a/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/index_arquivos/DOWNLOADS/1 - Copia.html
@@ -218,21 +218,21 @@ index
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+PESCA RAIZ NO IGAPÓ E PACU FEITO NA GRELHA COM TUCUPI - VIDA SIMPLES NO INTERIOR DO AMAZONAS
 .zip">
-NOME🔴
+PESCA RAIZ NO IGAPÓ E PACU FEITO NA GRELHA COM TUCUPI - VIDA SIMPLES NO INTERIOR DO AMAZONAS
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+Fácil bomba de água DIY com PVC e bicicleta - Engenharia caseira
 .zip">
-NOME🔴
+Fácil bomba de água DIY com PVC e bicicleta - Engenharia caseira (DICAS - COMO FAZER)
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
-LINK🔴
+O CANIBAL
 .zip">
-NOME🔴
+O CANIBAL (FILME)
 .</a></li>
 <!----------------------------------------------------------------------------------------------------------->
 <li><a target="_self" href="
