Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS ALEATÓRIOS/1 - Copia.html
@@ -82,11 +82,11 @@ https://i.ytimg.com/vi_webp/OXK-0vz5Q1c/maxresdefault.webp
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/XBUEpWXtYms
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/XBUEpWXtYms/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+El Teléfono! Electr!zante <BR/>CEL. ERA P/ SER ASSIM.
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
