Update 1 - Copia.html

--- a/index_arquivos/FILMES/1 - Copia.html
+++ b/index_arquivos/FILMES/1 - Copia.html
@@ -130,11 +130,11 @@ Axcellerator
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/AmKmHrj3b4s
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/AmKmHrj3b4s/maxresdefault.jpg?v=61a4a97e
 " width="280" height="280"></a><BR/>
-NOME⚫
+FIM DA VIAGEM
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
