Update 1 - Copia.html

--- a/index_arquivos/CANAIS/1 - Copia.html
+++ b/index_arquivos/CANAIS/1 - Copia.html
@@ -151,11 +151,11 @@ INCRÍVEL
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube.com/@MUNDOCOMPARTILHADOOFICIAL
 " target="_blank"><img src="
-IMAGEM⚫
+https://yt3.googleusercontent.com/_n1AlECZs1wPE9z4wed9VLZHjRs5zAWtND04GoXiP2owT1eDgU8s3Zo5ZQ__1kbDcVBsfeK2IA=s176-c-k-c0x00ffffff-no-rj
 " width="280" height="280"></a><BR/>
-NOME⚫
+MUNDO COMPARTILHADO
 .<BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
