--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@ COMÉDIAS
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="index_arquivos/
-CANAIS
+PASTA⚫
 /1 - Copia.html" target="_self"><img src="
-https://uploads.spiritfanfiction.com/historias/capas/201612/um-sonho-de-ser-youtuber-7367528-151220162344.jpg
+IMAGEM⚫
 " width="280" height="280"></a><BR/>
-CANAIS
+NOME⚫
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="index_arquivos/
