--- a/index_arquivos/TV/HBO.html
+++ b/index_arquivos/TV/HBO.html
@@ -1,1 +1,1 @@
-﻿<iframe name=Player "" src="https://sinalpublico.com/player3/ch.php?canal=hbo" frameborder=0 height=400 scrolling=no width=640 allow="encrypted-media" allowFullScreen> </iframe>
+﻿<CENTER><iframe name=Player "" src="https://sinalpublico.com/player3/ch.php?canal=hbo" frameborder=0 height=400 scrolling=no width=100% allow="encrypted-media" allowFullScreen> </iframe></CENTER>
