--- a/index_arquivos/FILMES/1 - Copia (2).html
+++ b/index_arquivos/FILMES/1 - Copia (2).html
@@ -55,7 +55,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -63,7 +65,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -71,7 +75,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -79,7 +85,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -87,7 +95,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -95,7 +105,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -103,7 +115,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -111,7 +125,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -119,7 +135,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -127,7 +145,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -135,7 +155,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -143,7 +165,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -151,7 +175,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -159,7 +185,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -167,7 +195,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -175,7 +205,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -183,7 +215,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -191,7 +225,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -199,7 +235,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -207,7 +245,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -215,7 +255,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -223,7 +265,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -231,7 +275,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -239,7 +285,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -247,7 +295,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -255,7 +305,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -263,7 +315,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -271,7 +325,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -279,7 +335,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -287,7 +345,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -295,7 +355,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -303,7 +365,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -311,7 +375,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -319,7 +385,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -327,7 +395,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
 LINK⚫
@@ -335,7 +405,9 @@ LINK⚫
 IMAGEM⚫
 " width="280" height="280"></a><BR/>
 NOME⚫
-<BR/></button>
+<BR/><a href="
+NOMETXT⚫
+.txt" target="_blank">SINÓPSE</a></button>
 
 
 
